--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^5.0.4",
     "bootstrap": "^4.4.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
