--- a/client/package.json
+++ b/client/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@ant-design/icons": "^4.8.0",
+    "@fontsource/roboto": "^4.5.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^5.0.4",
     "bootstrap": "^4.4.1",
     "jwt-decode": "^2.2.0",
-    "react": "^16.13.1",
+    "react": "^18.2.0",
     "react-bootstrap": "^1.0.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^6.2.1",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.4",
     "react-scripts": "^4.0.2"
   },
   "scripts": {
