--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^4.0.2"
+    "react-scripts": "^4.0.2",
+    "docx": "^7.7.0",
+    "file-saver": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
