--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,15 @@
   "proxy": "http://localhost:3001",
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
-    "@apollo/client": "^3.7.2",
+    "@apollo/client": "^3.5.8",
     "@fontsource/roboto": "^4.5.8",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^5.0.4",
+    "apollo-server-express": "^3.6.2",
     "bootstrap": "^4.4.1",
-    "graphql": "^16.6.0",
+    "graphql": "^15.4.0",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
