--- a/package.json
+++ b/package.json
@@ -18,14 +18,16 @@
     "concurrently": "^5.1.0"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
-    "@mui/material": "^5.10.16",
+    "@apollo/client": "^3.5.8",
     "@stripe/stripe-js": "^1.46.0",
+    "apollo-server-express": "^3.6.2",
     "docx": "^7.7.0",
     "dotenv": "^16.0.3",
     "formik": "^2.2.9",
+    "graphql": "^15.4.0",
+    "i": "^0.3.7",
     "jsonwebtoken": "^8.5.1",
+    "npm": "^9.2.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "stripe": "^11.1.0",
