--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.0.4",
     "bootstrap": "^4.4.1",
     "docx": "^7.8.0",
+    "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
     "graphql": "^15.4.0",
     "jwt-decode": "^2.2.0",
