--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "graphql": "^15.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
-    "stripe": "^8.67.0"
+    "stripe": "^8.67.0",
+    "dotenv": "^16.0.3"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
