--- a/client/package.json
+++ b/client/package.json
@@ -6,30 +6,19 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "@apollo/client": "^3.5.8",
-    "@stripe/stripe-js": "^1.3.1",
     "@fontsource/roboto": "^4.5.8",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@stripe/stripe-js": "^1.3.1",
     "antd": "^5.0.4",
-    "apollo-server-express": "^3.6.2",
-    "bootstrap": "^4.4.1",
     "docx": "^7.8.0",
     "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
     "graphql": "^15.4.0",
+    "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
-    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.4.4",
-    "react-scripts": "^4.0.2",
-    "@stripe/stripe-js": "^1.46.0",
-    "dotenv": "^16.0.3",
-    "formik": "^2.2.9",
-    "jsonwebtoken": "^8.5.1",
-    "stripe": "^11.1.0",
-    "yup": "^0.32.11"
+    "react-scripts": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
