--- a/server/package.json
+++ b/server/package.json
@@ -20,8 +20,7 @@
     "graphql": "^15.4.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
-    "dotenv": "^16.0.3"
-
+    "stripe": "^11.3.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.3.0",
