--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^6.4.4",
     "react-scripts": "^4.0.2"
