--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "resumade-app",
   "version": "1.0.0",
   "engines": {
-    "node": "16.17.0",
-    "npm": "8.15.0"
+    "node": "16.x",
+    "npm": "8.x"
   },
   "description": "",
   "main": "server/server.js",
