--- a/client/package.json
+++ b/client/package.json
@@ -23,8 +23,8 @@
     "react-scripts": "^4.0.2"
   },
   "scripts": {
-    "start": "react-scripts start --openssl-legacy-provider",
-    "build": "react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build --openssl-legacy-provider",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
