--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,10 @@
 {
   "name": "client",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
+  },
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
@@ -24,7 +28,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build --openssl-legacy-provider",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
