--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,10 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "engines": {
+    "node": "16.x",
+    "npm": "8.x"
+  },
   "description": "",
   "main": "server.js",
   "scripts": {
