--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@stripe/stripe-js": "^1.3.1",
     "antd": "^5.0.4",
     "bootstrap": "^4.4.1",
+    "dayjs": "^1.11.7",
     "docx": "^7.8.0",
     "dotenv": "^16.0.3",
     "file-saver": "^2.0.5",
