--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@stripe/stripe-js": "^1.3.1",
     "antd": "^5.0.4",
+    "babel-runtime": "^7.0.0-alpha.20",
     "bootstrap": "^4.4.1",
     "dayjs": "^1.11.7",
     "docx": "^7.8.0",
